--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,4 +45,7 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:26.0.0')
 
     implementation 'com.google.firebase:firebase-database'
+
+    implementation 'com.google.firebase:firebase-database:11.8.0'
+    implementation 'com.firebaseui:firebase-ui-database:3.1.3'
 }
