--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Bookshelf_firebase">
-        <activity android:name=".view.ActivityCadastroLivro"></activity>
+        <activity android:name=".view.ActivityUpdate"></activity>
+        <activity android:name=".view.ActivityCadastroLivro" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
